	GObject. Let it be imported instead. This allows it to me moved to the
	glib package.
	
	* tools/hierarchyGen/Hierarchy.chs.template: fixup names of imported
	modules. Also castToGObject will be imported so need not be defined
	locally.

	* tools/callbackGen/Signal.chs-boot1,
	tools/callbackGen/Signal.chs-boot2: fix module name and imports.

2005-01-07 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/apiGen/ApiGen.hs: several documentation improvements, add
	module level documentation and produce contents list. Also note in the
	documentation what gtk version the module as a whole and individual
	functions are avaliable from, eg "available since Gtk version 2.4".

	* tools/apiGen/format-docs.xsl: extract module level documentation,
	the summary, description and any extra sections including program
	listings. The object hierarchy has not yet been added.
	
	* tools/apiGen/Template.chs: added Haddock headers and rename some
	template variables. Move major documentation section to export list.

	* tools/apiGen/gen-all.sh: fix buglet.

	* tools/apiGen/README: update TODO list.

2005-01-06 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/apiGen/ApiGen.hs, tools/apiGen/Template.chs
	tools/apiGen/format-docs.xsl, tools/apiGen/gen-all.sh,
	tools/apiGen/gapi2xml.pl, tools/apiGen/gapi_pp.pl,
	tools/apiGen/README: new tool to semi-automatically generate binding
	modules from C headder files with Haddock documentation extracted from
	gtk-doc docbook xml files. Perl scripts by gtk-sharp team.

2004-12-19 Duncan Coutts <duncan@coutts.uklinux.net>

	* configure.ac: add support for conditionals in Makefile.am so that
	--disable-gnome, --disable-libglade will work again.
	Instead of doing #include<gtk/gtkversion.h> in config.h just define the
	GTK_CHECK_VERSION in config.h. It's a simple macro and it means that
	now config.h does not depend on any -I include paths so can be used in
	any module. Also added hack to stop warnings about PACKAGE_* variables